--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,6 @@
     margin: 0;
     box-sizing: border-box;
     background-repeat: no-repeat;
-    overflow-x: hidden;
 }
 
 body {
